# linhas

./: README.md
Linhas.NET/: Linhas_Eletrica.sln  Linhas_Eletrica.vbproj  frmLinhas_Ele.Designer.vb  frmLinhas_Ele.resx  frmLinhas_Ele.vb
Linhas_C/: Linhas.cpp  Linhas.mak
Linhas_Delphi/: Capacitancia.dcu  Capacitancia.dfm  Capacitancia.pas  Indutancia_sem_solo.dcu  Indutancia_sem_solo.dfm  Indutancia_sem_solo.pas  Indutancia_solo_ideal.dcu  Indutancia_solo_ideal.dfm  Indutancia_solo_ideal.pas  Indutancia_solo_real.dcu  Indutancia_solo_real.dfm  Indutancia_solo_real.pas  Linhas.dof  Linhas.dpr  Principal.dcu  Principal.dfm  Principal.pas  Resistencia.dcu  Resistencia.dfm  Resistencia.pas
Linhas_MatLAB/: Dados.m  Linhas.m  Reat_2.m  Reat_3.m  Reat_C.m
Linhas_Python/: pyproject.toml
Linhas_Python/linhas/: Dados.m  Reat_1.m  Resist.m
Linhas_VB/: Linhas_Eletrica.frm  Linhas_Eletrica.frx  Linhas_Eletrica.vbp  Linhas_Eletrica.vbw  MSSCCPRJ.SCC
Linhas_VB/Eletrica/: Ele-Linhas de Transmissao.xls  Linhas_C.txt
Linhas_VB/Mecanica/: Mec-Equação_de_Mudança_de_Estado.xlsx  Mec-Linhas.cpp  Mec-Rel8 EME_ lu.xlsx  Mec-Temp_final.xlsx  Mec-Tmaxcond.xlsx
docs/: Linhas de Transmissao.doc  Linhas de Transmissao_capa.doc
tests/: test_linhas.py
